<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tc3p0.prayertracker.NewPrayerActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#26B99A"
            android:id="@+id/TitleBar"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newTitle"
                android:id="@+id/TitleText"
                android:layout_alignParentStart="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="false"
                android:layout_centerInParent="true"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:id="@+id/MainMenuButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:contentDescription="back arrow"
                android:src="@drawable/left_arrow"
                android:background="#29B99A" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strTitle"
            android:id="@+id/textView22"
            android:textColor="#26B99A"
            android:textStyle="bold" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TitleBox"
            android:background="#dddddd"
            android:editable="true"
            android:enabled="true"
            tools:ignore="TextFields"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strDescription"
            android:id="@+id/textView5"
            android:textColor="#26B99A"
            android:textStyle="bold" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/DescriptorBox"
            android:background="#dddddd"
            android:nestedScrollingEnabled="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strEndOn"
            android:id="@+id/textView8"
            android:textColor="#26B99A"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:id="@+id/frameLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strDaysOfWk"
            android:id="@+id/textView7"
            android:linksClickable="false"
            android:textColor="#26B99A"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp" >

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:id="@+id/SunChoose"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/MonChoose" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:id="@+id/SunImg"
                    android:clickable="false"
                    android:background="#26B99A"
                    android:cropToPadding="false"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="sunday prayer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="S"
                    android:id="@+id/textView12"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:id="@+id/MonChoose"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/TueChoose" >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:id="@+id/MonImg"
                    android:background="#26B99A"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="monday prayer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="M"
                    android:id="@+id/textView13"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:id="@+id/TueChoose"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/WedChoose" >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:id="@+id/TueImg"
                    android:background="#26B99A"
                    android:contentDescription="tuesday prayer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="T"
                    android:id="@+id/textView14"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:id="@+id/WedChoose"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true" >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:id="@+id/WedImg"
                    android:background="#26B99A"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="wednesday prayer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="W"
                    android:id="@+id/textView15"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:id="@+id/ThuChoose"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/WedChoose" >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:id="@+id/ThuImg"
                    android:background="#26B99A"
                    android:contentDescription="thursday prayer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="T"
                    android:id="@+id/textView16"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:id="@+id/FriChoose"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/ThuChoose" >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:id="@+id/FriImg"
                    android:background="#26B99A"
                    android:contentDescription="friday prayer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="F"
                    android:id="@+id/textView17"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:id="@+id/SatChoose"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/FriChoose" >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:id="@+id/SatImg"
                    android:background="#26B99A"
                    android:contentDescription="saturday prayer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="S"
                    android:id="@+id/textView18"
                    android:nestedScrollingEnabled="false"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:background="#26B99A"
            android:id="@+id/relativeLayout"
            android:layout_marginRight="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strAnswered"
                android:id="@+id/textView3"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="false"
                android:background="#26B99A"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_centerInParent="true" />

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
