<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.tc3p0.prayertracker.PrayerActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#26B99A"
            android:id="@+id/relativeLayout"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prayerTitle"
                android:id="@+id/PrayerActivityTitle"
                android:layout_alignParentStart="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="false"
                android:layout_centerInParent="true"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/backarrow" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"></LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView3" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strDateAdded"
                android:id="@+id/textView4"
                android:layout_alignParentLeft="true"
                android:textColor="#26B99A"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5/4/2015"
                android:id="@+id/textView5"
                android:layout_toRightOf="@+id/textView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strEndDate"
                android:id="@+id/textView6"
                android:layout_toLeftOf="@+id/textView7"
                android:textColor="#26B99A"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView7"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:id="@+id/SunPrayer"
                android:clickable="false"
                android:background="#26B99A"
                android:cropToPadding="false"
                android:layout_toLeftOf="@+id/MonPrayer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="S"
                android:id="@+id/SunLabel"
                android:layout_below="@+id/SunPrayer" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:id="@+id/MonPrayer"
                android:background="#26B99A"
                android:layout_toLeftOf="@+id/TuePrayer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="M"
                android:id="@+id/MonLabel" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:id="@+id/TuePrayer"
                android:background="#26B99A"
                android:layout_toLeftOf="@+id/WedPrayer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="T"
                android:id="@+id/TueLabel" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:id="@+id/WedPrayer"
                android:background="#26B99A"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="W"
                android:id="@+id/WedLabel" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:id="@+id/ThuPrayer"
                android:background="#26B99A"
                android:layout_toRightOf="@+id/WedPrayer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="T"
                android:id="@+id/ThuLabel" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:id="@+id/FriPrayer"
                android:background="#26B99A"
                android:layout_toRightOf="@+id/ThuPrayer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="F"
                android:id="@+id/FriLabel" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:id="@+id/SatPrayer"
                android:background="#26B99A"
                android:layout_toRightOf="@+id/FriPrayer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="S"
                android:id="@+id/SatLabel"
                android:layout_below="@+id/SatPrayer"
                android:layout_alignRight="@+id/SatPrayer"
                android:nestedScrollingEnabled="false"
                android:layout_alignLeft="@+id/SatPrayer" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:background="#26B99A">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAnswered"
            android:id="@+id/textView2"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:background="#26B99A"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>
